🐛 - fixed a bug with the chart being slightly too wide

--- a/style.css
+++ b/style.css
@@ -395,3 +395,9 @@ svg {
     inset: 18% 55%;
   }
 }
+
+@media only screen and (min-width: 1400px) and (min-height: 1000px) {
+  .chart_wrapper {
+    width: clamp(300px, 95vw, 1200px);
+  }
+}
